Use classes to collapse assertion groups. Fixes #269
* Also:
 - Added needed {has, add, remove}Class implementations.
   Should be solid, improvements welcome.
 - Removed '#qunit-tests ol' selector which was interfering with the
   lower-score selector '.qunit-assert-list'. This selector is
   redundant since it is always being overridden by '#qunit-tests ol' which sets margin and padding. Reset is redundant.

--- a/qunit/qunit.css
+++ b/qunit/qunit.css
@@ -20,7 +20,7 @@
 
 /** Resets */
 
-#qunit-tests, #qunit-tests ol, #qunit-header, #qunit-banner, #qunit-userAgent, #qunit-testresult, #qunit-modulefilter {
+#qunit-tests, #qunit-header, #qunit-banner, #qunit-userAgent, #qunit-testresult, #qunit-modulefilter {
 	margin: 0;
 	padding: 0;
 }
@@ -111,7 +111,7 @@
 	color: #000;
 }
 
-#qunit-tests ol {
+.qunit-assert-list {
 	margin-top: 0.5em;
 	padding: 0.5em;
 
@@ -120,6 +120,10 @@
 	border-radius: 5px;
 	-moz-border-radius: 5px;
 	-webkit-border-radius: 5px;
+}
+
+.qunit-collapsed {
+	display: none;
 }
 
 #qunit-tests table {
